...
                    customColor = it
                },
            )
        },
        confirmButton = {
            ColorDialogActions(
                confirmText = "Use this color",
                confirmTestTag = null,
                onCancel = onDismiss,
                onConfirm = ::useColorAndDismiss,
            )
        },
    )
...
